Updated the table of contents.

--- a/thesis.tex
+++ b/thesis.tex
@@ -43,9 +43,55 @@ Die vorliegende Arbeit \dots
 
 \startTextChapters %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Introduction}
+\chapter{Motivation}
 
-\section{Whatever}
+
+
+\chapter{Hintergrund}
+
+\section{E-Learning}
+\section{Lernmanagementsysteme}
+\section{Moderne Kommunikationswege / Kommunikation in der Digitalen Lehre}
+Wie kommunizieren die Studierenden haupts"achlich im Zeitalter der Digitalen Lehre?
+\section{Messenger}
+
+
+
+\chapter{Anforderungen}
+
+\section{Opensource}
+\section{Messengerauswahl - Softwarealternativen}
+\begin{itemize}
+    \item{Matrix}
+    \item{Rocketchat}
+    \item{Mattermost}
+\end{itemize}
+
+
+
+\chapter{Implementation}
+
+\section{Stud.IP}
+\subsection{Blubber}
+\subsection{JSON-API}
+
+\section{Matrix}
+\subsection{Synapse}
+\subsection{Client - Element}
+
+\section{Mappen der APIs}
+
+
+
+\chapter{Evaluation}
+
+\section{Chancen}
+\section{Probleme}
+
+
+\chapter{Ausblick}
+Potentielle Nutzung in der Zukunft und Weiterentwicklung?
+
 
 \newpage
 Beispieltext. Siehe auch \cite{Fischer:1995, Besl:1992, Thrun:2000}.
