Update Motivation and add sources.

--- a/papers.bib
+++ b/papers.bib
@@ -3,12 +3,12 @@
 #       title is a *quote* and should be printed exactly as in the cited paper.
 #       Putting the title in brackets (as shown below) prevents this behaviour.
 
-@book{Fischer:1995,
-  author    = "G. Fischer",
-  title     = "{Lineare Algebra}",
-  year      = "1995",
-  publisher = "Friedrich Vieweg \& Sohn Verlagsgesellschaft mbH",
-  address   = "Braunschweig / Wiesbaden",
+@book{Schulmeister:2005,
+  author    = "R. Schulmeister",
+  title     = "{Lernplattformen f"ur das virtuelle Lernen: Evaluation und Didaktik}",
+  year      = "2005",
+  publisher = "Oldenbourg Wissenschaftsverlag",
+  address   = "{M"unchen}",
 }
 
 @article{Besl:1992,
@@ -32,9 +32,9 @@
   pages     = "321--328",
 }
 
-@misc{robocup,
-  author    = "RoboCup",
-  title     = "{Robot World Cup Soccer Games and Conferences}",
-  note = {\url{http://www.robocup.org}},
+@misc{your-study,
+  author    = "{S. A"smann}",
+  title     = "{You(r) Study - Eigensinnig Studieren im 'digitalen Zeitalter'}",
+  note = {\url{https://your-study.info/}},
 }
 
