--- a/thesis.tex
+++ b/thesis.tex
@@ -34,7 +34,9 @@
 \cleardoublepage
 
 \begin{prefacesection}{Zusammenfassung}
+
 Die vorliegende Arbeit \dots
+
 \end{prefacesection}
 
 \cleardoublepage
@@ -45,6 +47,14 @@ Die vorliegende Arbeit \dots
 
 \chapter{Motivation}
 
+Lehren und Lernen im digitalen Zeitalter.\\
+Moderne Kommunikationswege und - mittel studiumsunterstützend einsetzen.\\
+Aktuelle Werkzeuge nutzen, um Studierenden eine möglichst niedrige
+Einstiegsschwelle bei Fragen oder Unklarheiten zu bieten.\\
+Fortw"ahrender Prozess der Weiterentwicklung und Anpassung der Vermittlung von Informationen.\\
+Mailinglisten, Foren, Instant-Messenger \dots \\
+Wie studiert man heute? Wie ist die durchschnittliche Nutzung der
+Studierenden von WhatsApp und Co.? (Bezug auf die Studien)\\
 
 
 \chapter{Hintergrund}
@@ -94,8 +104,8 @@ Potentielle Nutzung in der Zukunft und Weiterentwicklung?
 
 
 \newpage
-Beispieltext. Siehe auch \cite{Fischer:1995, Besl:1992, Thrun:2000}.
-URLs gehen auch: \cite{robocup}.
+Beispieltext. Siehe auch \cite{Schulmeister:2005, Besl:1992, Thrun:2000}.
+URLs gehen auch: \cite{your-study}.
 
 % DON'T set \bibliographystyle here -- use the documentclass option instead
 \bibliography{papers}
