Adding requirements (sections) deduced from the internal survey.

--- a/thesis.tex
+++ b/thesis.tex
@@ -65,13 +65,64 @@ Empirischer Teil: Anforderungsanalyse mit Hilfe eines (Mini-) Fragebogens.
 
 Unterkapitel für jede herausgearbeitete Anforderung (funktional + nicht funktional).
 
+\section{Veranstaltungen auf R"aume abbilden}
+Kurse, Studengruppen, \dots sollten (automatisch) auf R"aume in Matrix abgebildet werden.
+
+\section{kein zus"atzliches Login}
+Nur ein Login für beide Systeme/Dienste. LDAP-Anbindung. Stud.IP Nutzer sollten ohne zus"atzliches Login
+in einen Matrix Raum gelangen können.
+
+\section{Übernahme der Teilnehmendenlisten}
+
+\section{Übersichtliches UI}
+Klare Übersicht (Nachrichten und Bedienung) undabh"angig von OS/Browser/Screensize (Portabilit"at).
+Gute Usability, wenig Klicks und ein modernes Erscheinungsbild.
+
+\section{Benachrichtigungsfunktion}
+Eher ungeeignet: unibezogene/veranstaltungsübergreifende Informationen, wie z.B. Rückmeldefristen, Unischließung, \dots
+(dies w"are ein reiner Infochannel, in dem alle Studierenden sein müssten,
+keine Antwortmöglichkeit -> one-way Kommunikation -> eMail/Stud.IP Benachrichtigung wie bisher ist da vielleicht besser)
+Besser: veranstaltungsbezogene Informationen, z.B. "eine Datei wurde hochgeladen", "Termin f"allt aus"
+
+\section{Nachrichten senden und empfangen (Basisfunktionen)}
+
+\section{Direktnachrichten}
+1-zu-1 Chats
+
+\section{Transparenz}
+Verknüpfung zwischen Stud.IP und Matrix/Element deutlich machen.
+
+\section{Übernahme von Rollen und Rechten}
+Feingranulare Berechtigungen für Studierende ist nur eingeschr"ankt umsetzbar, da es in Matrix nur 3 Rechtestufen gibt.
+Denkbar w"are grob: Dozenten -> Moderator/Admin und Studierende -> Default.
+In Matrix lassen sich zus"atzlich benutzerdefinierte Rechtestufen erstellen, eventuell lassen sich damit alle in Stud.IP
+verfügbaren Rechtestufen abbilden.
+
+\section{mehrere R"aume pro Kurs}
+Es sollten aus einer Stud.IP Veranstaltung mehrere Matrix-R"aume erstellt werden können, die dann als Community
+zusammengefasst werden könnten.
+
+\section{Synchronizit"at}
+Zum einen sollten Matrix und Blubber zeitlich synchron sein. Zum anderen w"are es wünschenswert, wenn
+die in einem System als gelesen markierte Nachrichten auch im anderen System als gelesen markiert würden.
+
+\section{Matrix/Element in Blubber verlinken}
+Chat/Matrix/Element-Icon in Blubber anzeigen, mit dem man zu dem Uni-Matrix/Element-Raum gelangt.
+
+\section{Matrix als Hauptmessengingdienst}
+Weg von Blubber.
+
+\section{Kompatibilit"at von Nachrichten in Blubber und Matrix}
+\subsection{Dateien versenden}
+Verlinken von Inhalten in Stud.IP?
+Eventuell zu aufw"andig.
+\subsection{Emoticons korrekt anzeigen}
+\subsection{Nachrichten sollten editier- und löschbar sein}
+
 \section{Opensource}
 \section{Stud.IP Plugin}
 \section{keine zus"atzliche API}
 \section{Sicherheit}
-\section{kein zus"atzliches Login}
-\section{Nachrichten senden und empfangen}
-\section{Dateien senden und empfangen}
 
 
 
