Adding comments and bullet points and TODOs after meeting.

--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,9 @@ Die vorliegende Arbeit \dots
 \startTextChapters %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Motivation}
+Praesens, Passivkonstruktionen, KEIN Erlebnisbericht
+Ich habe für X/Y entschieden, eigene Schlussfolgerungen kenntlich machen
+Im Hintergrund keine wertenden Einschaetzungen!
 
 Lehren und Lernen im digitalen Zeitalter.\\
 Moderne Kommunikationswege und - mittel studiumsunterstützend einsetzen.\\
@@ -145,6 +148,11 @@ Empirischer Teil: Anforderungsanalyse mit Hilfe eines (Mini-) Fragebogens.
 
 \section{Umfrage zur Anforderungsanalyse}
 Unterkapitel für jede herausgearbeitete Anforderung (funktional + nicht funktional).
+\textbf{Support-Hotline-Raum}
+Eine Support-Hotline-Funktion bei der man eine Gruppe von Personen erreichen kann,
+um ein Anliegen zu besprechen und der Chat beendet wird, nach dem das Anliegen erledigt ist
+bzw.\ nur der Kunde aus dem Chat entfernt wird.
+
 
 \section{Grundsatzentscheidung}
 Möglichkeit der beiden entwickelten Konzepte darstellen und die Entscheidung begründen.
@@ -155,58 +163,97 @@ Konzept 1: vollst"andige Bridge (möglichst voller Funktionsumfang) / eigener Cli
 Konzept 2: Lose Kopplung, Anbindung statt Integration
 - sinnvolle Diskussion, wie so eine Anbindung aussehen könnte
 - zwei klar getrennte Systeme (Transparenz)
-
-% TODO: Zusammenfassen von Anforderungen
-\section{Anforderungen}
-\subsection{Veranstaltungen auf R"aume abbilden}
-Kurse, Studengruppen, \dots sollten (automatisch) auf R"aume in Matrix abgebildet werden.
-
-\subsection{kein zus"atzliches Login}
-Nur ein Login für beide Systeme/Dienste. LDAP-Anbindung. Stud.IP Nutzer sollten ohne zus"atzliches Login
-in einen Matrix Raum gelangen können.
-
-\subsection{Übernahme der Teilnehmendenlisten}
-
-\subsection{Übersichtliches UI}
+es wurden einige Anforderungen genannt, die nicht behandelt werden müssen, da diese bereits im Element-Client vorhanden sind
+Nachrichten senden und empfangen (Basisfunktionen)
+Übersichtliches UI
 Klare Übersicht (Nachrichten und Bedienung) undabh"angig von OS/Browser/Screensize (Portabilit"at).
 Gute Usability, wenig Klicks zum Bilden von Arbeitsgruppen, Direktchats, usw.\ und ein modernes Erscheinungsbild.
 Matrix/Element in Blubber verlinken:
 Chat/Matrix/Element-Icon in Blubber anzeigen, mit dem man zu dem Uni-Matrix/Element-Raum gelangt.
+\textbf{Matrix als Hauptmessengingdienst}
+Weg von Blubber. Entscheidung der Dozenten, was genutzt wird
+Blubber abschalten, müssen die Betreiber entscheiden
+\textbf{Stummschalten von (Veranstaltungs-) R"aumen}
+In Stud.IP ist es bisher nicht vorgesehen einzelne Blubber-Nachrichten als gelesen zu markieren.
+
+
+
+% TODO: Zusammenfassen von Anforderungen
+\section{Anforderungen}
+\subsection{Übernamhme von Veranstaltungsinformationen Veranstaltungen auf R"aume abbilden + Übernahme der Teilnehmendenlisten}
+Kurse, Studengruppen, \dots sollten (automatisch) auf R"aume in Matrix abgebildet werden.
+
+\subsection{kein zus"atzliches Login}
+Nur ein Login für beide Systeme/Dienste. Single Sign-On Stud.IP Nutzer sollten ohne zus"atzliches Login
+in einen Matrix Raum gelangen können.
 
 \subsection{Benachrichtigungsfunktion}
-Eher ungeeignet: unibezogene/veranstaltungsübergreifende Informationen, wie z.B. Rückmeldefristen, Unischließung, \dots
+\textbf{Synchronizit"at}
+Zum einen sollten Matrix und Blubber zeitlich synchron sein. Zum anderen w"are es wünschenswert, wenn
+die in einem System als gelesen markierte Nachrichten auch im anderen System als gelesen markiert würden.
+
+Man möchte in Matrix über relevante Ereignisse informiert werden. (-> sp"ater, was ist eigentlich relevant, Tabelle: Relevanzabsch"atzung für ereignisse,
+was ist relevant für alle? persönliche Pr"aferenzen kann man mit dem hier entschiedenen Modell nicht berücksichtigen, deshalb
+sind folgende
+Konfiguration pro Veranstaltung sinnvoll? Welche Ereignisse sollen Erscheinen, oder nicht?Diskussion, was spricht dafür, was spricht dagegegen? 
+Aus studentensicht evtl.\ verwirrend -> Agrument gegen Konfig.
+Elmar oder Marcus -> Noftifications, wenn z.B. eine Datei hochgeladen wird.
+Richtung Stud.IP -> Matrix, oder Matrix -> Stud.IP (nicht genannt, aber der Vollst"andigkeit halber dennoch genannt)
+braucht man eine Konfigurationsmöglichkeit dafür?
+wichtige Infos über die Kopplung hinweg.
+Informationsveranstaltung mit uniübergreifenden Infos, denkbar.
+(Eher ungeeignet, nach unten): unibezogene/veranstaltungsübergreifende Informationen, wie z.B. Rückmeldefristen, Unischließung, \dots
 (dies w"are ein reiner Infochannel, in dem alle Studierenden sein müssten,
 keine Antwortmöglichkeit -> one-way Kommunikation -> eMail/Stud.IP Benachrichtigung wie bisher ist da vielleicht besser)
 Besser: veranstaltungsbezogene Informationen, z.B. "eine Datei wurde hochgeladen", "Termin f"allt aus"
 
-\subsection{Nachrichten senden und empfangen (Basisfunktionen)}
 
 \subsection{Direktnachrichten}
 1-zu-1 Chats\\
+
 \textbf{Sprechstundenfunktion} bei der man für eine kurze Zeit einen 1-zu-1 Chat
 mit einer Person führt und den Chat danach auch automatisch verlässt.
 Andere Personen sind in der Zeit in einer Warteschlange.
 
 \subsection{Transparenz}
 Verknüpfung zwischen Stud.IP und Matrix/Element deutlich machen.
+Welche Konsequenzen hat das eigene Handeln in Matrix, wenn ich in Stud.IP etwas mache?
+"Diese Aktion wird in Matrix erscheinen."
+"Wie bekommen die Studierenden mit, dass es den Kanal gibt?" - Studierende sollten irgendwie informiert werden.
+Reiter: Messenger -> Infos + Kurzanleitung + evtl. Konfiguration
+Kann man deutlich machen, wie w"are es denn, wenn ich in Stud.IP sehen kann, wenn in Element etwas passiert.\
+was heißt es eigenltich, wenn man zwei verschiedene Dienste hat?
+Was soll wo passieren? Hochladen einer Datei -> Dialog: erscheint auch im Matrix-Kanal, Schalter (Analyse Idee, schreiben, nicht umsetzen)?
+(Implementation: gibt Stud.IP)
 
 \subsection{Übernahme von Rollen, Rechten und Status}
+manuelle Nutzerverwaltung in Matrix sollte nicht genutzt werden, zwischen Doz und Tutoren nicht unterscheiden.
+Userstatus spielt in der Praxis kaum eine Rolle. Synchen der User. User = autoren
+Anbindung von Fremdsystemen mit einem anderen Rollen-Rechte-Konzept.
 Feingranulare Berechtigungen für Studierende ist nur eingeschr"ankt umsetzbar, da es in Matrix nur 3 Rechtestufen gibt.
 Denkbar w"are grob: Dozenten -> Moderator/Admin und Studierende -> Default.
 In Matrix lassen sich zus"atzlich benutzerdefinierte Rechtestufen erstellen, eventuell lassen sich damit alle in Stud.IP
 verfügbaren Rechtestufen abbilden.\\
 Der eigene Status sollte leicht einzustellen sein oder aus Stud.IP übernommen werden (sichtbar/nicht sichtbar)
+Man könnte in Matrix auch manuelle Rollen anlegen
+Datenschutzaspekt: Ich möchte unsichtbar sein, in Matrix schwierig.
+Datenschutzrechtliche Begründung, warum steht der Name der Studenten in der Raumliste?
+beibehalten der Kommunikationskultur, keine anonymen Beitr"age möglich
+in Matrix raumbezogene Einstellung: Teilnehmerliste ist sichtbar oder nicht
+in synchronisierten Raeumen wir die Teilnehmerliste nicht angezeigt, kann Matrix das? Diskussion, was mache ich jetzt?
+1. ich halte fest, es ist ein offenes Problem, Umsetzung trotz nicht datenschutzkonform
+2. leute, die sich unsichtbar geschaltet haben, werden nicht mitsynchronisiert, die bekommen evtl nichts mehr mit
+3. leute, die in min 1 VA unsichtbar sind -> mit Synonym sichtbar machen.
+- jeder Student muss von Stud.IP aus seine Zustimmung geben, das weitergeben des Nutzers an Matrix aktivieren (ist das sinnvoll?)
+gibt es Alternativen? ich sehe keinen guten Grund, das eine oder andere zu machen. -> Workshop mit Entwicklern und Didaktikern -> Ergebnisse
+-> Aus technischer Sicht gibt es keinen Grund, das eine oder das andere zu nehmen, Workshop hat ergeben: folgendes Ergebnis
+Beim Austragen oder aendern der Rechtestufe in Matrix synchron zu halten. -> Cronjob einmal stündlich
+Lose Kopplung, nur einmal anlegen, was danach mit dem Raum passiert ist offen
 
 \subsection{mehrere R"aume pro Kurs}
 Es sollten aus einer Stud.IP Veranstaltung mehrere Matrix-R"aume erstellt werden können, die dann als Community
 zusammengefasst werden könnten.
-
-\subsection{Synchronizit"at}
-Zum einen sollten Matrix und Blubber zeitlich synchron sein. Zum anderen w"are es wünschenswert, wenn
-die in einem System als gelesen markierte Nachrichten auch im anderen System als gelesen markiert würden.
-
-\subsection{Matrix als Hauptmessengingdienst}
-Weg von Blubber.
+Mögliche Erweiterung (sinnvoll oder nicht?)
 
 \subsection{Kompatibilit"at von Nachrichten in Blubber und Matrix}
 Stud.IP (Blubber) sollte als regul"arer Client agieren.\\
@@ -216,24 +263,28 @@ Eventuell zu aufw"andig.\\
 \textbf{Emoticons korrekt anzeigen}\\
 \textbf{Nachrichten sollten editier- und löschbar sein}
 
-\subsection{Stummschalten von (Veranstaltungs-) R"aumen}
-In Stud.IP ist es bisher nicht vorgesehen einzelne Blubber-Nachrichten als gelesen zu markieren.
 \subsection{Übernahme des Stud.IP Profilbildes}
-\subsection{Support-Hotline-Raum}
-Eine Support-Hotline-Funktion bei der man eine Gruppe von Personen erreichen kann,
-um ein Anliegen zu besprechen und der Chat beendet wird, nach dem das Anliegen erledigt ist
-bzw.\ nur der Kunde aus dem Chat entfernt wird.
+Personenbezogene Daten. Datenschutz. Sobald Matrixkopplung, dann auch Bild übertragen (im Reiter, s.o.), aktive Zustimmung
+verweis auf Profil->Einstellungen->Privatsph"are->Eigenes Bild
+Stud.IP: Wie darf mein Bild verwendet werden? "Darf auch extern angezeigt werden"
+gibt die API das überhaupt her, kann man auch weglassen, wenn es aus Zeitgründen nicht mehr klappt
 
 % nicht funktionale Anforderungen, die allerdings NICHT in der Anforderungsanalyse herausgefallen sind
 \subsection{Opensource}
 \subsection{Stud.IP Plugin}
 \subsection{keine zus"atzliche API}
 \subsection{Sicherheit}
+\subsection{Robustheit, Ausfallsicherheit}
+was passiert, wenn der Matrix Server für 3 Std.\ ausfaellt? Werden Messages gepuffert?
+Implementation direkt über eine Que laufen lassen, DB mit Ergebnissen, die noch so Matrix geschickt werden müssen +
+Cronjob 1x Std., gibt es noch Ereignisse, die nicht abgearbeitet wurden?
+%Performance, woanders betrachten
 
 
 
 \chapter{Implementation}
-Hier die Anforderungskapitelüberschriften kopieren und Stück für Stück erörtern.
+Hier die Anforderungskapitelüberschriften kopieren und Stück für Stück erörtern. Sinnhaftigkeit, Umsetzung,
+Mögliche Umsetzung oder keine Umsetzung diskutieren.
 
 
 
